# Surge-Prediction-Multiplier

./: .dockerignore  .env.example  .gitignore  CONTRIBUTORS.md  Dockerfile  MODEL_CARD.md  README.md  api.py  config_loader.py  deploy_to_hf.sh  feature_engineering.py  main.py  modeling.py  pyproject.toml  requirements.txt  retrieval.py  train_model.py
backend/: README.md  api.py  config.yaml  interpretability.py  main.py  modeling.py  monitor_dask.py  retrieval.py  train_model.py  weather_service.py  zone_metadata.py
backend/setup/: requirements.txt  setup_dask.sh
backend/tests/: __init__.py  conftest.py  test_modeling.py  test_retrieval.py  test_weather_service.py
docs/: project-overview-and-roadmap.md
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  SliderField.tsx  index.css  predictionTypes.ts  uiConfig.ts
models/: model_info.pkl  xgboost_surge_model.pkl  xgboost_surge_model_20260708_202540.pkl  xgboost_surge_model_20260714_022250.pkl
scripts/: refresh_tlc_data.py
setup/: requirements.txt
tests/: test_modeling.py  test_retrieval.py  test_weather_service.py
