[project]
name = "surge-pred"
version = "0.1.0"
description = "NYC Taxi Surge Prediction with Weather Data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Data processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyarrow>=14.0.0",
    "fastparquet>=2024.11.0",
    
    # Dask for large data processing
    "dask[complete]>=2024.1.0",
    "distributed>=2024.1.0",
    
    # Weather API
    "requests-cache>=1.0.0",
    "retry-requests>=2.0.0",
    "openmeteo-requests>=1.0.0",
    
    # Machine Learning
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    
    # Progress visualization
    "tqdm>=4.65.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
]
